...
        Surface(modifier = Modifier.fillMaxSize(), color = MaterialTheme.colorScheme.background) {
            Mavericks.initialize(LocalContext.current)
            WordDetail.Page(
                viewModel = WordDetailVMImpl(
                    WordDetailState(), repository = object : WordRepository {
                        private val words = FakeWord().wordData
                        override val wordHistory = MutableStateFlow(listOf("aaa", "bbb"))
                        override val currentLayer = MutableStateFlow(0)
                        override val currentWord = MutableStateFlow("")
                        override val details = MutableStateFlow(words)
                        override suspend fun push(key: WordKey) {}
                        override suspend fun pop(): Boolean = true
                        override suspend fun searchFor(word: String) =
...
        searchFor: (word: String) -> Unit,
        modifier: Modifier = Modifier,
    ) {
        LazyColumn(
            contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("word data list")
        ) {
            items(data.size) { index ->
                WordData(
                    data[index],
                    indexAt(data.size, index),
                    searchFor = searchFor,
...
        list: List<Word>,
        onWordChanged: (String) -> Unit,
        onFirstItem: (height: Int) -> Unit,
        onClose: () -> Unit,
        onItemClick: (word: String) -> Unit,
    ) {
        LazyColumn(modifier = Modifier.testTag("search section")) {
            item {
                SearchSectionHeader(
                    word = word,
                    onWordChanged = onWordChanged,
                    onFirstItem = onFirstItem,
                    onClose = onClose,
...
        word: String,
        onItemClick: (word: String) -> Unit,
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("search section item")
                .clearAndSetSemantics {
                    contentDescription = word
                    role = Role.Button
                }
        ) {
            Divider()
...
    @Composable
    fun WordData(data: Word.Data, index: String?, searchFor: (word: String) -> Unit) {
        FlexibleRow(
            horizontalSpacing = 8.dp,
            modifier = Modifier
                .padding(bottom = 16.dp)
                .testTag("word data")
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    data.word,
                    style = MaterialTheme.typography.headlineSmall,
                    color = MaterialTheme.colorScheme.primary,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.testTag("word title")
                )
                IndexItem(
                    index = index, modifier = Modifier
                        .align(Alignment.Top)
                        .testTag("word index")
                )
...
    fun Section(section: Word.Data.Section, searchFor: (word: String) -> Unit) {
        Card(
            colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.primaryContainer),
            elevation = CardDefaults.cardElevation(defaultElevation = 4.dp),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("word section")
        ) {
            Column(
                verticalArrangement = Arrangement.spacedBy(8.dp), modifier = Modifier.padding(16.dp)
            ) {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
...
                style = LocalTextStyle.current.copy(fontWeight = FontWeight.Bold),
                modifier = Modifier
                    .padding(end = 4.dp)
                    .testTag("section index")
            )
            Column {
                Part(data.value, searchFor = searchFor, modifier = Modifier.testTag("section value"))
                Column(modifier = Modifier.testTag("section samples")) {
                    data.samples.forEach { SamplePart(it, searchFor = searchFor) }
                }
            }
        }
    }
...
